--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Navigation bar</title>
+    <title>Sākums</title>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
@@ -170,9 +170,9 @@ color: #eaa6ff;
     <nav>
       <ul>
         <li><a href="#">🏠 Sākums 🏠</a></li>
-        <li><a href="Prezentacijas/Android_Studio">💻 Prezentācija  💻</a></li>
-        <li><a href="Izmantotie_Avoti">🛠️ Izmantotie Avoti 🛠️</a></li>
-        <li><a href="Aplikacija">📱 Aplikācija 📱</a></li>
+        <li><a href="Prezentacijas/Android_Studio.php">💻 Prezentācija  💻</a></li>
+        <li><a href="Izmantotie_Avoti.php">🛠️ Izmantotie Avoti 🛠️</a></li>
+        <li><a href="Aplikacija.php">📱 Aplikācija 📱</a></li>
       </ul>
     </nav>
     <div style="text-align: center; " id="hamburger-icon" onclick="toggleMobileMenu(this)">
