--- a/index.html
+++ b/index.html
@@ -181,9 +181,9 @@ color: #eaa6ff;
       <div class="bar3"></div>
       <ul class="mobile-menu" style=" text-align: center; background-color: #1d1f1d;">
           <li><a href="#">🏠 Sākums  🏠</a></li>
-          <li><a href="Prezentacijas/Android_Studio">💻 Prezentācija 💻</a></li>
-          <li><a href="Izmantotie_Avoti">🛠️ Izmantotie Avoti 🛠️</a></li>
-          <li><a href="Aplikacija">📱 Aplikācija 📱</a></li>
+          <li><a href="Prezentacijas/Android_Studio.php">💻 Prezentācija 💻</a></li>
+          <li><a href="Izmantotie_Avoti.php">🛠️ Izmantotie Avoti 🛠️</a></li>
+          <li><a href="Aplikacija.php">📱 Aplikācija 📱</a></li>
       </ul>
     </div>
 
