--- a/index.html
+++ b/index.html
@@ -170,9 +170,9 @@ color: #eaa6ff;
     <nav>
       <ul>
         <li><a href="#">🏠 Sākums 🏠</a></li>
-        <li><a href="Prezentacijas/Android_Studio.php">💻 Prezentācija  💻</a></li>
-        <li><a href="Izmantotie_Avoti.php">🛠️ Izmantotie Avoti 🛠️</a></li>
-        <li><a href="Aplikacija.php">📱 Aplikācija 📱</a></li>
+        <li><a href="Prezentacijas/Android_Studio.html">💻 Prezentācija  💻</a></li>
+        <li><a href="Izmantotie_Avoti.html">🛠️ Izmantotie Avoti 🛠️</a></li>
+        <li><a href="Aplikacija.html">📱 Aplikācija 📱</a></li>
       </ul>
     </nav>
     <div style="text-align: center; " id="hamburger-icon" onclick="toggleMobileMenu(this)">
@@ -181,9 +181,9 @@ color: #eaa6ff;
       <div class="bar3"></div>
       <ul class="mobile-menu" style=" text-align: center; background-color: #1d1f1d;">
           <li><a href="#">🏠 Sākums  🏠</a></li>
-          <li><a href="Prezentacijas/Android_Studio.php">💻 Prezentācija 💻</a></li>
-          <li><a href="Izmantotie_Avoti.php">🛠️ Izmantotie Avoti 🛠️</a></li>
-          <li><a href="Aplikacija.php">📱 Aplikācija 📱</a></li>
+          <li><a href="Prezentacijas/Android_Studio.html">💻 Prezentācija 💻</a></li>
+          <li><a href="Izmantotie_Avoti.html">🛠️ Izmantotie Avoti 🛠️</a></li>
+          <li><a href="Aplikacija.html">📱 Aplikācija 📱</a></li>
       </ul>
     </div>
 
