--- a/Aplikacija.html
+++ b/Aplikacija.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Navigation bar</title>
+    <title>Aplikācija</title>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
@@ -162,9 +162,9 @@ color: red;
     <div id="brand"><a href="Sakums">Rinalds Kristians Tulpe</a></div>
     <nav>
       <ul>
-        <li><a href="Sakums">🏠 Sākums 🏠</a></li>
-        <li><a href="Prezentacijas/Android_Studio">💻 Prezentācija  💻</a></li>
-        <li><a href="Izmantotie_Avoti">🛠️ Izmantotie Avoti 🛠️</a></li>
+        <li><a href="index.html">🏠 Sākums 🏠</a></li>
+        <li><a href="Prezentacijas/Android_Studio.html">💻 Prezentācija  💻</a></li>
+        <li><a href="Izmantotie_Avoti.html">🛠️ Izmantotie Avoti 🛠️</a></li>
         <li><a href="#">📱 Aplikācija 📱</a></li>
       </ul>
     </nav>
@@ -173,9 +173,9 @@ color: red;
       <div class="bar2"></div>
       <div class="bar3"></div>
       <ul class="mobile-menu" style=" text-align: center; background-color: #1d1f1d;">
-          <li><a href="Sakums">🏠 Sākums  🏠</a></li>
-          <li><a href="Prezentacijas/Android_Studio">💻 Prezentācija 💻</a></li>
-          <li><a href="Izmantotie_Avoti">🛠️ Izmantotie Avoti 🛠️</a></li>
+          <li><a href="index.html">🏠 Sākums  🏠</a></li>
+          <li><a href="Prezentacijas/Android_Studio.html">💻 Prezentācija 💻</a></li>
+          <li><a href="Izmantotie_Avoti.html">🛠️ Izmantotie Avoti 🛠️</a></li>
           <li><a href="#">📱 Aplikācija 📱</a></li>
       </ul>
     </div>
