--- a/Izmantotie_Avoti.html
+++ b/Izmantotie_Avoti.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Navigation bar</title>
+    <title>Izmantotie Avoti</title>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
@@ -167,10 +167,10 @@ a:hover{
     <div id="brand"><a href="Sakums">Rinalds Kristians Tulpe</a></div>
     <nav>
       <ul>
-        <li><a href="Sakums">🏠 Sākums 🏠</a></li>
-        <li><a href="Prezentacijas/Android_Studio">💻 Prezentācija  💻</a></li>
+        <li><a href="index.html">🏠 Sākums 🏠</a></li>
+        <li><a href="Prezentacijas/Android_Studio.html">💻 Prezentācija 💻</a></li>
         <li><a href="#">🛠️ Izmantotie Avoti 🛠️</a></li>
-        <li><a href="Aplikacija">📱 Aplikācija 📱</a></li>
+        <li><a href="Aplikacija.html">📱 Aplikācija 📱</a></li>
       </ul>
     </nav>
     <div style="text-align: center; " id="hamburger-icon" onclick="toggleMobileMenu(this)">
@@ -178,10 +178,10 @@ a:hover{
       <div class="bar2"></div>
       <div class="bar3"></div>
       <ul class="mobile-menu" style=" text-align: center; background-color: #1d1f1d;">
-          <li><a href="Sakums">🏠 Sākums  🏠</a></li>
-          <li><a href="Prezentacijas/Android_Studio">💻 Prezentācija 💻</a></li>
+          <li><a href="index.html">🏠 Sākums  🏠</a></li>
+          <li><a href="Prezentacijas/Android_Studio.html">💻 Prezentācija 💻</a></li>
           <li><a href="#">🛠️ Izmantotie Avoti 🛠️</a></li>
-          <li><a href="Aplikacija">📱 Aplikācija 📱</a></li>
+          <li><a href="Aplikacija.html">📱 Aplikācija 📱</a></li>
       </ul>
     </div>
 
