--- a/Prezentacijas/Android_Studio.html
+++ b/Prezentacijas/Android_Studio.html
@@ -140,6 +140,8 @@ width: 100%
 
 }
 
+}
+
 @import url('https://fonts.googleapis.com/css?family=Exo+2');
 
 
@@ -161,13 +163,13 @@ a:hover {
 
 
   <header>
-    <div id="brand"><a href="../Sakums">Rinalds Kristians Tulpe</a></div>
+    <div id="brand"><a href="../index.html">Rinalds Kristians Tulpe</a></div>
     <nav>
       <ul>
-        <li><a href="../Sakums">🏠 Sākums 🏠</a></li>
+        <li><a href="../index.html">🏠 Sākums 🏠</a></li>
         <li><a href="#">💻 Prezentācija  💻</a></li>
-        <li><a href="../Izmantotie_Avoti">🛠️ Izmantotie Avoti 🛠️</a></li>
-        <li><a href="Aplikacija">📱 Aplikācija 📱</a></li>
+        <li><a href="../Izmantotie_Avoti.html">🛠️ Izmantotie Avoti 🛠️</a></li>
+        <li><a href="Aplikacija.html">📱 Aplikācija 📱</a></li>
       </ul>
     </nav>
     <div style="text-align: center; " id="hamburger-icon" onclick="toggleMobileMenu(this)">
@@ -175,10 +177,10 @@ a:hover {
       <div class="bar2"></div>
       <div class="bar3"></div>
       <ul class="mobile-menu" style=" text-align: center; background-color: #1d1f1d;">
-          <li><a href="../Sakums">🏠 Sākums  🏠</a></li>
+          <li><a href="../index.html">🏠 Sākums  🏠</a></li>
           <li><a href="#">💻 Prezentācija 💻</a></li>
-          <li><a href="../Izmantotie_Avoti">🛠️ Izmantotie Avoti 🛠️</a></li>
-          <li><a href="../Aplikacija">📱 Aplikācija 📱</a></li>
+          <li><a href="../Izmantotie_Avoti.html">🛠️ Izmantotie Avoti 🛠️</a></li>
+          <li><a href="../Aplikacija.html">📱 Aplikācija 📱</a></li>
       </ul>
     </div>
 
