--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@ color: #eaa6ff;
 
     <br>
 
-    <img src="../img/SOFTWARE_DEVELOPER.png" width="500px">
+    <img src="img/SOFTWARE_DEVELOPER.png" width="500px">
 
     <div class="container p-5 my-5 border" style="border-radius: 30px;">
 <img src="img/ANDROID_STUDIO.png" width="500px">
