Add button ""Lejuplādēt"

--- a/Aplikacija.html
+++ b/Aplikacija.html
@@ -208,12 +208,12 @@ color: red;
         <br>
         <h4>Noskenē kodu ar mobilo ierīci</h4>
         <br>
-  <img src="../img/frame.png">
+  <img src="img/frame.png">
 
 <br>
 <br>
   <a href="https://firebasestorage.googleapis.com/v0/b/timegoes-441ae.appspot.com/o/app-release.apk?alt=media&token=52b70767-0a53-4d24-83ee-bc5bb47945c2" download>
-    <img class="download" src="../img/download.png" alt="Lejuplādēt" width="300px">
+    <img class="download" src="img/download.png" alt="Lejuplādēt" width="300px">
   </a>
       </div>
 
