--- a/index.html
+++ b/index.html
@@ -136,13 +136,8 @@ ul li:hover {
   }
 
 
-  img {
-width: 100%
-
-
-
   }
-}
+
 
 @import url('https://fonts.googleapis.com/css?family=Exo+2');
 
@@ -207,7 +202,8 @@ color: #eaa6ff;
 
     <br>
 
-    <img src="img/SOFTWARE_DEVELOPER.png" width="500px">
+  
+    <img src="img/SOFTWARE_DEVELOPER.png" class="img-fluid" alt="SOFTWARE_DEVELOPER">
 
     <div class="container p-5 my-5 border" style="border-radius: 30px;">
 <img src="img/ANDROID_STUDIO.png" width="500px">
