--- a/Izmantotie_Avoti.html
+++ b/Izmantotie_Avoti.html
@@ -134,10 +134,7 @@ ul li:hover {
     display: block;
   }
   
-    img {
-width: 100%
 
-    }
   
 }
 
@@ -203,7 +200,8 @@ a:hover{
 
     <br>
 
-    <img src="img/IZMANTOTIE_AVOTI.png" width="500px">
+    <img src="img/IZMANTOTIE_AVOTI.png" class="img-fluid" alt="IZMANTOTIE_AVOTI">
+    
 
     <div class="container p-5 my-5 border" style="border-radius: 30px;">
          <p style="text-align: center;"><a href="https://developer.android.com/studio" style=" text-align: center;">Android Studio Download</a></p>
