--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@ color: #eaa6ff;
     <img src="img/SOFTWARE_DEVELOPER.png" class="img-fluid" alt="SOFTWARE_DEVELOPER">
 
     <div class="container p-5 my-5 border" style="border-radius: 30px;">
-<img src="img/ANDROID_STUDIO.png" width="500px">
+<img src="img/ANDROID_STUDIO.png" class="img-fluid" alt="ANDROID_STUDIO">
 
         <br>
         <p style="text-align: center;"> 
@@ -226,7 +226,7 @@ color: #eaa6ff;
 
 
       <div class="container p-5 my-5 border" style="border-radius: 30px;">
-        <img src="img/VISUAL_STUDIO_CODE.png" width="500px">
+        <img src="img/VISUAL_STUDIO_CODE.png" class="img-fluid" alt="VISUAL_STUDIO_CODE">
         <br>
         
 
