--- a/index.html
+++ b/index.html
@@ -128,6 +128,10 @@ ul li:hover {
     display: block;
   }
 
+  .accordion {
+
+    padding: 2px
+  }
 
   }
 
@@ -230,7 +234,7 @@ border-radius: 20px;
     <div class="card" style="border-radius: 20px; background-color: #1300bb8c;">
       <div class="card-body">
         <img src="img/ANDROID_STUDIO.png" class="img-fluid" alt="ANDROID_STUDIO">
-        <div class="accordion" id="accordionPanelsStayOpenExample" style="padding: 20px;">
+        <div class="accordion" id="accordionPanelsStayOpenExample" style="padding: 5px;">
           <div class="accordion-item bg-warning" >
             <h2 class="accordion-header" id="panelsStayOpen-headingOne">
               <button style="background-color: #3700a3; color: aliceblue;" class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="true" aria-controls="panelsStayOpen-collapseOne">
@@ -274,7 +278,7 @@ border-radius: 20px;
     <div class="card" style="border-radius: 20px; background-color: #1300bb8c;">
       <div class="card-body">
         <img src="img/VISUAL_STUDIO_CODE.png" class="img-fluid" alt="VISUAL_STUDIO_CODE">
-        <div class="accordion" id="accordionPanelsStayOpenExample" style="padding: 20px;">
+        <div class="accordion" id="accordionPanelsStayOpenExample" style="padding: 5px;">
           <div class="accordion-item bg-warning" >
             <h2 class="accordion-header" id="panelsStayOpen-headingOne">
               <button style="background-color: #3700a3; color: aliceblue;" class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="true" aria-controls="panelsStayOpen-collapseTwo">
