--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@ ul li:hover {
   margin-bottom: 10px;
 }
 
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 1000px) {
   header nav {
     display: none;
   }
@@ -136,7 +136,10 @@ ul li:hover {
 .codingscreen {
   visibility: hidden;
 }
-
+.col-sm-6 {
+  width: 100%
+  
+}
 
   }
 
@@ -172,6 +175,8 @@ border-radius: 20px;
 }
 
 
+
+
 </style>
 
 
@@ -198,13 +203,13 @@ border-radius: 20px;
             <a class="nav-link active" aria-current="page" href="#">Sākums</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Prezentācija</a>
+            <a class="nav-link" href="Prezentacijas/Android_Studio.html">Prezentācija</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#"> Izmantotie Avoti</a>
+            <a class="nav-link" href="Izmantotie_Avoti.html"> Izmantotie Avoti</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Aplikācija</a>
+            <a class="nav-link" href="Aplikacija.html">Aplikācija</a>
           </li>
         </ul>
       </div>
