--- a/index.html
+++ b/index.html
@@ -9,7 +9,13 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
 
+
+
+
+
+  
 <style>
 
 
@@ -26,7 +32,24 @@ body {
   color: white;
   font-family: "Poppins", sans-serif;
   text-align: center;
+
+
 }
+
+
+body {
+            -webkit-transition: background-color 1s;
+            transition: background-color 1s;
+        }
+        html, body { min-height: 100%; }
+        body.loading {
+            background: #333 url('http://code.jquery.com/mobile/1.3.1/images/ajax-loader.gif') no-repeat 50% 50%;
+            -webkit-transition: background-color 0;
+            transition: background-color 0;
+            opacity: 0;
+            -webkit-transition: opacity 0;
+            transition: opacity 0;
+        }
 
 header a {
   text-decoration: none;
@@ -190,6 +213,7 @@ a:hover{
 }
 
 
+
 </style>
 
 
@@ -232,7 +256,7 @@ a:hover{
   </header>
 
 <body style="color: black;">
- 
+v>
 
     <br>
 
@@ -375,8 +399,9 @@ a:hover{
 
 
 
-
-
+   
+  
 </div>
+
   </body>
 </html>
